# cs2-data

./: __init__.py  pyproject.toml
cs2_data/: __init__.py  maps.py
pages/: maps.py  players.py  weapons.py
