[tool.poetry]
name = "cs2-data"
version = "0.1.0"
description = ""
authors = ["Polluix <lipe311973@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
pandas = "^2.2.0"
pyarrow = "^14.0.2"
seaborn = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
